fix tone jumping issues and set the default tone to C4

--- a/src/styles/system/styles/_elements.scss
+++ b/src/styles/system/styles/_elements.scss
@@ -93,6 +93,7 @@ select {
   appearance: menulist;
   border-radius: $border-radius;
   background-color: $color--grey-50;
+  height: $s5 + $s1 / 2;
 
   @include button-select;
 }
